# AionCore

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  Cargo.toml  TEAM_API_INVESTIGATION.md  TEAM_SCHEDULING_ARCHITECTURE.md  justfile
.github/workflows/: build-manual.yml  (+2 more)
crates/aionui-ai-agent/: Cargo.toml
crates/aionui-ai-agent/src/: acp_agent.rs  acp_routes.rs  acp_service.rs  agent_manager.rs  agent_registry.rs  agent_routes.rs  agent_task.rs  aionrs_agent.rs  auxiliary_routes.rs  backend_protocol_sink.rs  factory.rs  gemini_agent.rs  idle_scanner.rs  lib.rs  middleware.rs  nanobot_agent.rs  openclaw_agent.rs  registry.rs  registry_config_option_tests.rs  remote_agent.rs  service.rs  skill_manager.rs  task_manager.rs  types.rs
crates/aionui-ai-agent/src/capability/: backend_output_sink.rs  first_message_injector.rs  mod.rs  prompt_pipeline.rs
crates/aionui-ai-agent/src/factory/: acp.rs  acp_assembler.rs  aionrs.rs  context.rs  mod.rs  nanobot.rs  openclaw.rs  remote.rs
crates/aionui-ai-agent/src/manager/: aionrs.rs
crates/aionui-ai-agent/src/openclaw/: agent.rs  protocol.rs
crates/aionui-ai-agent/src/protocol/: acp.rs  cli_detect.rs  error.rs  send_error.rs
crates/aionui-ai-agent/src/routes/: acp_probe.rs  agent.rs  conversation_ops.rs  error_mapping.rs  mod.rs  remote.rs  session_ops.rs
crates/aionui-ai-agent/src/services/: builtin_config.rs  mod.rs  provider_health.rs
crates/aionui-ai-agent/tests/: acp_agent_integration.rs  acp_module_surface.rs  agent_types_integration.rs  factory_provider_integration.rs  middleware_integration.rs  prompt_pipeline_integration.rs  skill_manager_integration.rs
crates/aionui-app/: Cargo.toml
crates/aionui-app/assets/builtin-assistants/: assistants.json  preset-id-whitelist.json
crates/aionui-app/assets/builtin-skills-empty/: .gitkeep
crates/aionui-app/src/: config.rs  guide_stdio.rs  lib.rs  main.rs  services.rs  state_builders.rs
crates/aionui-app/src/bootstrap/: environment.rs
crates/aionui-app/src/commands/: cmd_team_guide.rs  cmd_team_stdio.rs
crates/aionui-app/src/router/: routes.rs  state.rs  team_conversation_adapters.rs
crates/aionui-app/tests/: acp_config_options_e2e.rs  acp_e2e.rs  agent_integration_e2e.rs  assistants_e2e.rs  auth_e2e.rs  auxiliary_e2e.rs  channel_e2e.rs  conversation_e2e.rs  cron_e2e.rs  extension_e2e.rs  file_e2e.rs  health.rs  local_mode.rs  mcp_crud_e2e.rs  mcp_e2e.rs  message_e2e.rs  office_e2e.rs  skills_builtin_e2e.rs  startup_smoke.rs  system_auth_e2e.rs  system_provider_e2e.rs  system_settings_e2e.rs  system_version_e2e.rs  team_e2e.rs  websocket_e2e.rs  work_dir_e2e.rs
crates/aionui-app/tests/common/: mod.rs
crates/aionui-assistant/: Cargo.toml
crates/aionui-assistant/src/: builtin.rs  routes.rs  service.rs
crates/aionui-auth/: Cargo.toml
crates/aionui-auth/src/: csrf.rs  fork_xaiwork_bridge.rs  lib.rs  middleware.rs  rate_limit.rs  routes.rs
crates/aionui-auth/tests/: middleware_tests.rs  route_tests.rs
crates/aionui-channel/: Cargo.toml
crates/aionui-channel/src/: action.rs  constants.rs  formatter.rs  lib.rs  manager.rs  message_service.rs  pairing.rs  routes.rs  session.rs  stream_relay.rs  types.rs
crates/aionui-channel/tests/: formatter_test.rs  manager_integration.rs  orchestrator_test.rs  session_action_integration.rs  stream_relay_test.rs
crates/aionui-common/: Cargo.toml
crates/aionui-common/src/: enums.rs  error.rs  id.rs  lib.rs
crates/aionui-common/tests/: common_test.rs
crates/aionui-cron/: Cargo.toml
crates/aionui-cron/src/: artifacts.rs  events.rs  executor.rs  lib.rs  prompt.rs  routes.rs  scheduler.rs  service.rs  skill_file.rs  skill_suggest.rs  types.rs
crates/aionui-cron/tests/: prompt_test.rs  service_integration.rs  skill_file_test.rs
crates/aionui-extension/: Cargo.toml
crates/aionui-extension/src/: constants.rs  hub_routes.rs  lib.rs  routes.rs  skill_routes.rs  skill_service.rs  startup_materialize.rs  state.rs
crates/aionui-extension/tests/: assistant_dispatch_test.rs  cron_skill_resolve_test.rs  skill_integration_test.rs  startup_materialize.rs
crates/aionui-file/: Cargo.toml
crates/aionui-file/src/: browse.rs  error.rs  lib.rs  path_safety.rs  routes.rs  service.rs
crates/aionui-file/src/snapshot_service/: helpers.rs  mod.rs
crates/aionui-file/tests/: directory_browsing.rs  file_read_write.rs  snapshot.rs  zip_packaging.rs
crates/aionui-mcp/: Cargo.toml
crates/aionui-mcp/src/: lib.rs  routes.rs  service.rs  session_injection.rs
crates/aionui-mcp/src/adapters/: claude.rs  cli_helpers.rs  codebuddy.rs  codex.rs  gemini.rs  iflow.rs  mod.rs  qwen.rs
crates/aionui-mcp/tests/: service_integration.rs  session_injection_integration.rs
crates/aionui-realtime/: Cargo.toml
crates/aionui-realtime/src/: broadcaster.rs  handler.rs  lib.rs  manager.rs  router.rs  types.rs
crates/aionui-realtime/tests/: broadcast_integration.rs  handler_integration.rs  manager_integration.rs
crates/aionui-runtime/: Cargo.toml  build.rs
crates/aionui-runtime/src/: cache.rs  embed.rs  extract.rs  lib.rs  resolver.rs
crates/aionui-runtime/src/acp_tool_runtime/: mod.rs  types.rs
crates/aionui-runtime/src/node_runtime/: managed.rs  mod.rs
crates/aionui-runtime/tests/: extract_integration.rs
crates/aionui-team/: Cargo.toml
crates/aionui-team/docs/: README.md  api.md  frontend-guide.md  internals.md  mcp.md  team-prompts.md
crates/aionui-team/docs/phase1/: README.md  aionui-audit.md  backend-audit.md  impact-analysis.md  interface-contracts.md  milestones.md  modules.md
crates/aionui-team/docs/phase2/: bugfix.md
crates/aionui-team/src/: error.rs  event_loop.rs  events.rs  lib.rs  mailbox.rs  provisioning.rs  routes.rs  scheduler.rs  service.rs  session.rs  slot_wake_gate.rs  team_run.rs  test_utils.rs  types.rs  wake.rs  workspace.rs
crates/aionui-team/src/guide/: handlers.rs  mod.rs  server.rs
crates/aionui-team/src/mcp/: server.rs  tools.rs
crates/aionui-team/tests/: e2e_team_flow.rs  mcp_server_integration.rs  prompts_events_integration.rs  session_service_integration.rs
(+153 files in other folders)
