[package]
name = "aionui-ai-agent"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
aionui-auth.workspace = true
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-system.workspace = true
axum.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
reqwest.workspace = true
regex.workspace = true
aws-config.workspace = true
aws-sdk-bedrock.workspace = true
aws-sdk-bedrockruntime.workspace = true
dashmap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
which.workspace = true

[dev-dependencies]
tempfile = "3"
