[package]
name = "aionui-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aionui-backend"
path = "src/main.rs"

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-auth.workspace = true
aionui-system.workspace = true
aionui-file.workspace = true
aionui-office.workspace = true
aionui-shell.workspace = true
aionui-ai-agent.workspace = true
aionui-mcp.workspace = true
aionui-conversation.workspace = true
aionui-extension.workspace = true
aionui-channel.workspace = true
aionui-team.workspace = true
aionui-cron.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
reqwest.workspace = true
anyhow.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
wiremock = "0.6"
