[package]
name = "aionui-auth"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
tower.workspace = true
tower-http.workspace = true
dashmap.workspace = true
axum.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
getrandom.workspace = true
base64.workspace = true
sha2.workspace = true
# FORK-CUSTOM: XAIWork WeChat login bridge needs an HTTP client to poll XAIWork.
reqwest.workspace = true

[dev-dependencies]
serde_json.workspace = true
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }
