[package]
name = "aionui-channel"
version.workspace = true
edition.workspace = true

[features]
default = []
telegram = ["dep:reqwest"]
lark = ["dep:reqwest", "dep:tokio-tungstenite", "dep:futures-util", "dep:prost"]
dingtalk = ["dep:reqwest", "dep:tokio-tungstenite", "dep:futures-util"]
weixin = ["dep:reqwest", "dep:futures-util", "dep:base64", "dep:uuid"]

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-conversation.workspace = true
aionui-ai-agent.workspace = true
aionui-extension.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
getrandom.workspace = true
dashmap.workspace = true
regex.workspace = true
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
