[package]
name = "aionui-common"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
getrandom.workspace = true
semver.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
