[package]
name = "aionui-cron"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-conversation.workspace = true
aionui-ai-agent.workspace = true
aionui-auth.workspace = true
aionui-system.workspace = true
axum.workspace = true
cron.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
