[package]
name = "aionui-extension"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-runtime.workspace = true
async-trait.workspace = true
axum.workspace = true
dirs.workspace = true
fs2.workspace = true
include_dir.workspace = true
semver.workspace = true
notify.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
mime_guess.workspace = true
zip.workspace = true
reqwest.workspace = true
tempfile.workspace = true

# NTFS junctions are used on Windows to materialize skill links without
# requiring `SeCreateSymbolicLink` (Developer Mode / Admin). Pulled in
# only on Windows targets to avoid building it on Linux/macOS.
[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
async-trait.workspace = true
http-body-util.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
