[package]
name = "aionui-file"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-realtime.workspace = true
async-trait.workspace = true
tokio.workspace = true
walkdir.workspace = true
ignore.workspace = true
notify.workspace = true
zip.workspace = true
git2.workspace = true
reqwest.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dashmap.workspace = true

[dev-dependencies]
aionui-api-types.workspace = true
tempfile = "3"
