[package]
name = "aionui-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-system.workspace = true
async-trait.workspace = true
axum.workspace = true
dirs.workspace = true
thiserror.workspace = true
oauth2.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
