[package]
name = "aionui-runtime"
version.workspace = true
edition.workspace = true

[package.metadata.aionui-runtime]
bun_version = "1.1.38"

[dependencies]
thiserror.workspace = true
dirs.workspace = true
sha2.workspace = true
hex.workspace = true
which.workspace = true
zstd.workspace = true
fs2.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true

[build-dependencies]
sha2.workspace = true
hex.workspace = true
zstd.workspace = true
zip = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
toml = { workspace = true }
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
zstd.workspace = true
sha2.workspace = true
hex.workspace = true
