[package]
name = "aionui-runtime"
version.workspace = true
edition.workspace = true

[package.metadata.aionui-runtime]
# 1.3.x required: 1.1.38 has a stdin-buffering bug in `bun x --bun` that
# prevents AionUi's ACP adapter (long-lived stdio protocol) from ever
# receiving the initialize request — see aionui-backend fix notes for
# AionUi#2828. If bumping, keep >= 1.3.13.
bun_version = "1.3.13"

[dependencies]
thiserror.workspace = true
dirs.workspace = true
sha2.workspace = true
hex.workspace = true
which.workspace = true
zstd.workspace = true
fs2.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }

[build-dependencies]
sha2.workspace = true
hex.workspace = true
zstd.workspace = true
zip = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
toml = { workspace = true }
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
zstd.workspace = true
sha2.workspace = true
hex.workspace = true

[target.'cfg(unix)'.dependencies]
wait-timeout = "0.2"
