[package]
name = "aionui-team"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-conversation.workspace = true
aionui-ai-agent.workspace = true
aionui-auth.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
dashmap.workspace = true
regex.workspace = true
agent-client-protocol = "0.11.1"

[dev-dependencies]
sqlx.workspace = true
tokio = { workspace = true, features = ["test-util"] }
futures-util.workspace = true
reqwest.workspace = true
