[package]
name = "aionui-team"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-ai-agent.workspace = true
aionui-team-prompts.workspace = true
aionui-auth.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
dashmap.workspace = true
regex.workspace = true
agent-client-protocol = "0.11.1"
futures-util.workspace = true

[dev-dependencies]
sqlx.workspace = true
tokio = { workspace = true, features = ["test-util"] }
futures-util.workspace = true
reqwest.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
aionui-ai-agent = { workspace = true, features = ["test-support"] }
